# Minichess

./: CMakeLists.txt  README.md  unixBuild.sh
.cache/clangd/index/: adc.c.ED40B8B1371E9833.idx  adc.cpp.7F53DCA8E9CF594A.idx  adc.h.18C19483308AD297.idx  adc.hpp.B608425315C2FA7E.idx  button_manager.cpp.1D9DC70E35538EFC.idx  button_manager.hpp.0F35A35D94F4D399.idx  chess_board.cpp.26A49516AC794B3C.idx  chess_board.hpp.6A3B2AA0B9F7E175.idx  display.c.831374CE1D84FDE5.idx  display.cpp.8A55ACF84F71C8BB.idx  display.h.F6B8DB61B6AC57ED.idx  display.hpp.0650B5AB39025993.idx  i2c.c.72AA3AE6D1744207.idx  i2c.cpp.58566F71619F94B8.idx  i2c.h.29ACBA666187CD97.idx  i2c.hpp.5E9AD99E9F5C5583.idx  main.c.8E5D6671AA73C4C4.idx  main.c.B71CCBBE0E9F458B.idx  main.cpp.1CEC8DBFE45A7444.idx  millis.cpp.DEEDD780782D0838.idx  millis.hpp.FB25D69C6FEE1D68.idx  minichess.cpp.5750A3F0C05EDDF4.idx  minichess.hpp.4222FAFCD584E913.idx  text_renderer.cpp.615FEE59D83AAAE0.idx  text_renderer.hpp.5A9F4E8A5101FC98.idx  uart.c.9228E2B0DB70CF3B.idx  uart.cpp.F70D52B22B6C6DD6.idx  uart.h.80FA1E847472C678.idx  uart.hpp.4FB421E49CE2F5E8.idx
inc/: adc.hpp  button_manager.hpp  chess_board.hpp  display.hpp  i2c.hpp  millis.hpp  minichess.hpp  text_renderer.hpp  uart.hpp
src/: adc.cpp  button_manager.cpp  chess_board.cpp  display.cpp  i2c.cpp  main.cpp  millis.cpp  minichess.cpp  text_renderer.cpp  uart.cpp
